<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>me.tuhin47</groupId>
    <artifactId>all-services</artifactId>
    <version>0.7.0</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <axon-spring-boot-starter.version>4.5.2</axon-spring-boot-starter.version>
        <docker-compose-plugin.version>1.0.0</docker-compose-plugin.version>
        <flyway-core.version>10.22.0</flyway-core.version>
        <java.version>22</java.version>
        <jedis.version>4.4.0</jedis.version>
        <jwt.version>0.9.1</jwt.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <mysql-core.version>8.0.33</mysql-core.version>
        <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
        <org.projectlombok.version>1.18.30</org.projectlombok.version>
        <spring-boot.version>3.4.1</spring-boot.version>
        <spring-cloud-dependencies.version>2024.0.0</spring-cloud-dependencies.version>
        <jaxb.api.version>2.3.1</jaxb.api.version>
        <axon-server-version>4.10.3</axon-server-version>

    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.axonframework</groupId>
                <artifactId>axon-bom</artifactId>
                <version>${axon-server-version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <modules>
        <module>common</module>
        <module>saga</module>
        <module>aws-reactive</module>
        <module>apigateway</module>
        <module>chat-service</module>
        <module>configserver</module>
        <module>orderservice</module>
        <module>paymentservice</module>
        <module>productservice</module>
        <module>service-registry</module>
        <module>authservice</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>io.brachu</groupId>
                <artifactId>docker-compose-maven-plugin</artifactId>
                <version>${docker-compose-plugin.version}</version>
                <configuration>
                    <env>
                        <PROJECT_PATH>${project.basedir}</PROJECT_PATH>
                        <EUREKA_SERVER_ADDRESS>http://serviceregistry:8761/eureka</EUREKA_SERVER_ADDRESS>
                        <TRACING_URL>http://tracing:4317/</TRACING_URL>
                        <CONFIG_SERVER_URL>http://configserver:9296</CONFIG_SERVER_URL>
                        <MYSQL_HOST>database</MYSQL_HOST>
                        <MYSQL_PORT>3306</MYSQL_PORT>
                        <MYSQL_USER>root</MYSQL_USER>
                        <SQL_ROOT_PASSWORD>root</SQL_ROOT_PASSWORD>
                        <MYSQL_PASSWORD>root</MYSQL_PASSWORD>
                        <ENVIRONMENT>production</ENVIRONMENT>
                        <OAUTH_REDIRECT_URL>http://localhost:4200/auth/login</OAUTH_REDIRECT_URL>
                        <MONGO_HOST>mongo</MONGO_HOST>
                        <MONGO_DATABASE>chat_service</MONGO_DATABASE>
                        <MONGO_PORT>27017</MONGO_PORT>
                        <MONGO_USERNAME>root</MONGO_USERNAME>
                        <MONGO_PASSWORD>rootpassword</MONGO_PASSWORD>
                        <MONGO_AUTHENTICATION_DATABASE>admin</MONGO_AUTHENTICATION_DATABASE>
                        <REDIS_URL>redis://redis:6379</REDIS_URL>
                        <ALLOWED_ORIGINS>http://localhost:4200,http://localhost:8080</ALLOWED_ORIGINS>
                        <AXON_SERVER_URL>axonserver:8124</AXON_SERVER_URL>
                        <IMAGE_TAG>0.7.0</IMAGE_TAG>
                        <NOAUTH_ENABLE>false</NOAUTH_ENABLE>
                        <SPRING_MAIL_HOST>mailcatcher</SPRING_MAIL_HOST>
                        <SPRING_MAIL_PORT>1025</SPRING_MAIL_PORT>
                        <SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH>false</SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH>
                        <SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE>false
                        </SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE>
                    </env>
                    <projectName>spring-micro-47</projectName>
                    <file>docker-compose-prod.yml</file>
                    <wait>
                        <value>240</value>
                        <unit>SECONDS</unit>
                    </wait>
                </configuration>
            </plugin>
        </plugins>

    </build>
</project>